# magicolor-5430DL-os2

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.in  kmlf.spec
debian/: Makefile.am  Makefile.in  README.Debian  changelog  control  copyright  links  postinst  postrm  rules
src/: Makefile.am  Makefile.in  bmp.c  km_0.icm  km_1.icm  km_2.icm  kmlf.h  rastertokmlf.c
