#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(src/kmlf.h)
AC_CONFIG_SRCDIR([src/rastertokmlf.c])
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(magicolor5430DL,1.8.1)
# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Fix "prefix" variable if it hasn't been specified...
if test "$prefix" = "NONE"; then
        prefix="/"
fi
                                                                                
dnl Fix "exec_prefix" variable if it hasn't been specified...
if test "$exec_prefix" = "NONE"; then
        if test "$prefix" = "/"; then
                exec_prefix="/usr"
        else
                exec_prefix="$prefix"
        fi
fi

dnl Fix "datadir" variable if it hasn't been specified...
if test "$datadir" = "\${prefix}/share"; then
	if test "$prefix" = "/"; then
		datadir="/usr/share"
	else
		datadir="$prefix/share"
	fi
fi

uname=`uname`
dnl Fix "libdir" variable for lib64
if test "$libdir" = "\${exec_prefix}/lib"; then
	if test "$uname" = Linux -a -d /usr/lib/cups/filter; then
		libdir="$exec_prefix/lib"
	elif test "$uname" = Linux -a -d /usr/lib64/cups/filter; then
		libdir="$exec_prefix/lib64"
	else
		AC_MSG_RESULT([cups filter directory is not found])
	fi
fi

AC_MSG_NOTICE([libdir is $libdir])
#filterdir=/usr/lib/cups/filter
#AC_SUBST(filterdir)
KM_PPDDIR=/usr/share/cups/model/KONICA_MINOLTA
AC_SUBST(KM_PPDDIR)
                                                                                
UNAME=`(uname) 2>/dev/null || echo unknown`

case "$UNAME" in
        Darwin*)
                # Darwin (MacOS X)
                CUPS_SERVERBIN="$exec_prefix/libexec/cups"
                AC_DEFINE_UNQUOTED(CUPS_SERVERBIN, "$exec_prefix/libexec/cups",filter path)
		LDFLAGS="$LDFALGS -L/usr/local/lib"
		CPPFLAGS="$CPPFLAGS -I/usr/local/include -I/sw/include"
		KM_DATADIR=/Library/Printers/KONICA_MINOLTA/mc5430DL
		AC_DEFINE_UNQUOTED(KM_DATADIR, "/Library/Printers/KONICA_MINOLTA/mc5430DL",km data path)
                ;;
        *BSD*)
                # *BSD
                CUPS_SERVERBIN="$exec_prefix/libexec/cups"
                AC_DEFINE_UNQUOTED(CUPS_SERVERBIN, "$exec_prefix/libexec/cups",filter path)
		LDFLAGS="$LDFALGS -L/usr/local/lib"
		CPPFLAGS="$CPPFLAGS -I/usr/local/include"
		KM_DATADIR="$datadir/KONICA_MINOLTA/mc5430DL"
		AC_DEFINE_UNQUOTED(KM_DATADIR, "$datadir/KONICA_MINOLTA/mc5430DL",km data path)
                ;;
        *)
                # All others
                CUPS_SERVERBIN="$libdir/cups"
                AC_DEFINE_UNQUOTED(CUPS_SERVERBIN, "$libdir/cups",filter path)
		KM_DATADIR="$datadir/KONICA_MINOLTA/mc5430DL"
		AC_DEFINE_UNQUOTED(KM_DATADIR, "$datadir/KONICA_MINOLTA/mc5430DL",km data path)
		;;
esac
                                                                                
AC_SUBST(CUPS_SERVERBIN)
AC_SUBST(KM_DATADIR)
             
# Checks for libraries.
AC_CHECK_LIB(cups, ppdOpenFile)
AC_CHECK_LIB([cupsimage], [cupsRasterReadHeader])
AC_CHECK_LIB([jbig], [jbg_enc_init],
if test -f "/usr/lib64/libjbig.a"; then
	LIBJBIG="/usr/lib64/libjbig.a"
elif test -f "/usr/lib/libjbig.a"; then
	LIBJBIG="/usr/lib/libjbig.a"
elif test -f "/usr/local/lib64/libjbig.a"; then
	LIBJBIG="/usr/local/lib64/libjbig.a"
else
	LIBJBIG="/usr/local/lib/libjbig.a"
fi,
[AC_MSG_ERROR([Could not find libjbig.a])])
AC_SUBST(LIBJBIG)
AC_CHECK_LIB([lcms], [cmsCreateTransform],
if test -f "/usr/lib64/liblcms.a"; then
	LIBLCMS="/usr/lib64/liblcms.a"
elif test -f "/usr/lib/liblcms.a"; then
	LIBLCMS="/usr/lib/liblcms.a"
elif test -f "/usr/local/lib64/liblcms.a"; then
	LIBLCMS="/usr/local/lib64/liblcms.a"
else
	LIBLCMS="/usr/local/lib/liblcms.a"
fi,
[AC_MSG_ERROR([Could not find liblcms.a])])
AC_SUBST(LIBLCMS)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h limits.h stdlib.h string.h unistd.h])
AC_CHECK_HEADERS([lcms.h icc34.h jbig.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# If words are stored with the most significant byte first (like
# Motorola and PowerPC CPUs), define `WORDS_BIGENDIAN'.
AC_C_BIGENDIAN

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([memset strchr strrchr strstr strlcpy snprintf])

AC_CONFIG_FILES([Makefile src/Makefile debian/Makefile])
AC_OUTPUT

